# manipulatte

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/manipulatte/: __init__.py  backend.py  model_loader.py  model_scaffold.py
