[project]
name = "manipulatte"
version = "0.1.0"
description = "An extendible library to manipulate the self-attention mechanism of transformer-based models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Felix Michalak", email = "felix@michalax.de" },
]
dependencies = [
    "torch>=1.10.0",
    "safetensors>=0.3.0",
    "accelerate>=1.0.1",
    "transformers>=4.39.0",
    "setuptools>=75.3.2",
    "kagglehub>=0.3.12",
    "sentencepiece>=0.2.0",
    "recorder",
    "jamba",
    "recurrentgemma",
]

[tool.uv.sources]
recorder = { path = "recorder", editable = true}
recurrentgemma = { path = "recurrentgemma", editable = true }
jamba = { path = "jamba", editable = true }

[build-system]
requires = ["setuptools>=42", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["manipulatte"]

[project.urls]
Homepage = "https://github.com/lamalunderscore/manipulatte"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["D"]
"tests/*" = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["manipulatte"]
